--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "string": "cpp",
         "xstring": "cpp",
         "iostream": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "ostream": "cpp"
     }
 }
